fix body overflow

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 90;
   width: 100%;
   height: 9rem;
   backdrop-filter: blur(10px);
