--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -72,7 +72,7 @@
   position: absolute;
   top: 4.3%;
   left: 4%;
-  z-index: 99;
+  z-index: 10;
   width: 91.6%;
   height: 60%;
 
@@ -165,7 +165,7 @@
   transform: translateX(100%);
 }
 
-.btn {
+.btnContainer {
   position: relative;
   top: 20%;
   left: -24%;
@@ -193,7 +193,7 @@
     display: none;
   }
 
-  &__circle {
+  & .btn__circle {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -208,16 +208,13 @@
       width: 50px;
       height: 50px;
     }
-    @media (max-width: 767px) {
-      width: 40px;
-      height: 40px;
-    }
   }
 
-  &__whiteCircle {
+  & .btn__whiteCircle {
     position: absolute;
     top: 50%;
     left: 50%;
+    z-index: -111;
     transform: translate(-50%, -50%) scale(0);
     width: 60px;
     height: 60px;
@@ -230,10 +227,6 @@
       width: 50px;
       height: 50px;
     }
-    @media (max-width: 767px) {
-      width: 40px;
-      height: 40px;
-    }
 
     svg {
       width: 24px;
@@ -244,27 +237,23 @@
         width: 21px;
         height: 21px;
       }
-      @media (max-width: 767px) {
-        width: 17px;
-        height: 17px;
-      }
     }
   }
 
-  &__text {
+  & .btn {
     position: absolute;
     top: 50%;
+    left: -47%;
     transform: translateY(-50%);
     white-space: nowrap;
     z-index: 2;
-    padding: 24px 8px;
+    padding: 24px 8px 24px 70px;
+    background-color: transparent;
+    font-size: inherit;
     transition: 0.3s linear;
 
     @media (max-width: 1199px) {
     padding: 22px 6px;
-    }
-    @media (max-width: 767px) {
-      padding: 20px 4px;
     }
   }
 
@@ -277,7 +266,7 @@
       transform: translate(-50%, -50%) scale(1);
     }
 
-    .btn__text {
+    .btn {
       transform: translate(28px, -50%);
     }
   }
